      digests of non-Named servers used in circuit paths. (Fixes bug 336.)
    - Avoid choosing Exit nodes for entry or middle hops when the bandwidth
      available in non-Exit nodes is much higher then the bandwidth available
      in Exit nodes. (Fixes bug 200.)
    - Give more meaningful errors on control authentication failure.

  o Security Fixes, minor:
    - If a client asked for a server by name, and we didn't have a
      descriptor for a named server with that name, we might return an
      old one.
    - Fix NetBSD bug that could allow someone to force uninitialized RAM
      to be sent to a server's DNS resolver. This only affects NetBSD
      and other platforms that do not bounds-check tolower().
    - Reject (most) attempts to use Tor as a one-hop proxy; if many people
      start using Tor as a one-hop proxy, exit nodes become a more attractive
      target for compromise. (Fixes bug 303.)
    - Just because your DirPort is open doesn't mean people should be
      able to remotely teach you about hidden service descriptors. Now
      only accept rendezvous posts if you've got HSAuthoritativeDir set.

  o Major bugfixes:
    - Avoiding crashing on race condition in dns.c:
      tor_assert(! resolve->expire)
    - When a client asks the server to resolve (not connect to)
      an address, and it has a cached answer, give them the cached answer.
      Previously, the server would give them no answer at all.

  o Minor Bugfixes:
    - Two small performance improvements on parsing descriptors.
    - We were building exactly the wrong circuits when we anticipated
      hidden service requirements, meaning Tor would have to build all
      its circuits on demand.
    - Major performance improvement on inserting descriptors: change
      algorithm from O(n^2) to O(n).
    - Make the common memory allocation path faster on machines where
      malloc(0) returns a pointer.
    - Fix a debug log message in eventdns to say "X resolved to Y"